Working on fortran testing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,27 +16,33 @@
     <body>
 
         <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Scott Wales<br />
-                Computational Modelling Systems, ARC CoE for Climate Systems Science<br />
-                scott.wales@unimelb.edu.au
-              </p>
+            <div class="header">
+                <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+                <a class="extra" href="/">home</a>
             </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/ScottWales">github.com/ScottWales</a><br />
-              </p>
+
+            {{ content }}
+
+            <div class="footer">
+                <div class="contact">
+                    <p>
+                    Scott Wales<br>
+                    Computational Modelling Systems<br>
+                    <a href="http://climatescience.org.au">ARC CoE for Climate Systems Science</a><br>
+                    scott.wales@unimelb.edu.au
+                    </p>
+                </div>
+                <div style="float:right">
+                    <div class="contact">
+                        <p>
+                        <a href="https://github.com/ScottWales">github.com/ScottWales</a><br />
+                        </p>
+                    </div>
+                    <div>
+                        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><a rel="licence details" href="/licence.html">Licence Details</a>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
 
     </body>
