--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
-h1 { margin-bottom: 1em; }
+h1 { 
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -130,7 +133,7 @@ a:visited { color: #a0a; }
 /* standard */
 .post pre {
   border: 1px solid #ddd;
-  background-color: #eef;
+  background-color: #eee;
   padding: 0 .4em;
 }
 
@@ -140,7 +143,7 @@ a:visited { color: #a0a; }
 
 .post code {
   border: 1px solid #ddd;
-  background-color: #eef;
+  background-color: #eee;
   padding: 0 .2em;
 }
 
@@ -157,4 +160,13 @@ a:visited { color: #a0a; }
 
 .post pre.terminal code {
   background-color: #333;
+}
+
+table {
+    width: 100%;
+}
+
+td.linenos {
+    width: 5%;
+    text-align: right;
 }
