Add code language

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -148,7 +148,13 @@ pre {
     }
 }
 
-
+pre > code:before {
+    content: attr(data-lang);
+    float:right;
+    display: block;
+    color: grey;
+    text-align: right;
+}
 
 /**
  * Wrapper
